--- a/Makefile.common
+++ b/Makefile.common
@@ -8,11 +8,22 @@ JAVA=java
 JAR=jar
 endif
 
+detected_OS ?= $(shell uname -s)
+
+ifeq ($(detected_OS),Darwin)
+	sep=:
+else ifeq (MINGW32,$(findstring MINGW32,$(detected_OS)))
+	sep=;
+else ifeq (MINGW,$(findstring MINGW,$(detected_OS)))
+	sep=;
+else
+	sep=:
+endif
+
 antlr = 3rdParty/antlr/antlr-3.2.jar
-#antlr_depends = 3rdParty/antlr/antlr-2.7.7.jar
 licenses = 3rdParty/antlr/antlr_license.txt
-# TODO: Even junit 4.12 does not run on modern Java
-junit = 3rdParty/junit-4.6.jar
+junit = 3rdParty/junit-4.13.jar$(sep)3rdParty/hamcrest-core-1.3.jar
+corba = 3rdParty/jacorb-3.9.jar$(sep)3rdParty/jacorb-omgapi-3.9.jar$(sep)3rdParty/jboss-rmi-api_1.0_spec-1.0.6.Final.jar$(sep)3rdParty/slf4j-api-1.7.14.jar$(sep)3rdParty/slf4j-jdk14-1.7.14.jar
 
 grammars = src/org/openmodelica/corba/parser/OMCorbaDefinitions.g
 
